--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,16 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <ion-title>Pokédex</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <h2>Bienvenue sur le Pokédex national</h2>
+<ion-list *ngIf = "pokemons">
+  <button class="maj"  ion-item *ngFor="let pokemon of pokemons" (click)="details(pokemon.id)">
+    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{pokemon.id}}.png"/>
+    {{pokemon.name}}
+  </button>
+</ion-list>
+
 </ion-content>
